--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -828,14 +828,14 @@
                 <a href="{{ url_for('video_script.video_script') }}"
                    class="nav-subitem {% if request.endpoint and 'video_script' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
-                    <i class="ph ph-file-doc"></i>
-                    <span>Scripts</span>
+                    <i class="ph ph-scroll"></i>
+                    <span>Video Script</span>
                 </a>
 
                 <a href="{{ url_for('video_title.video_title') }}"
                    class="nav-subitem {% if request.endpoint and 'video_title' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
-                    <i class="ph ph-text-t"></i>
+                    <i class="ph ph-sparkle"></i>
                     <span>Video Title</span>
                 </a>
 
